--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  display: grid;
 }
 
 .App-header {
@@ -16,4 +17,17 @@
 .App-intro {
   font-size: large;
 }
+
+.head {
+  grid-column: 1 /span 3;
+  grid-row: 1;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 10px;
+  background-color: #FFFFFA;
+}
+
 
